public/css/app.css
/* ... */
#loginlink {
		color:#fff;
}

.login-info {

padding: 6px 0;
color: #fff;
}

 
.dropdown-icon { /* Little arrow */
	width: 23px;
height: 21px;
}

.dropdown-icon .icon-paw {
font-size: 1.5em;
margin-right: 10px;
}

.dropdown .icon-stack-exchange {
font-size: 1.1em;
margin-top: -1px;
}





/* No CSS3 support */
 
.no-opacity       .wrapper-dropdown-1 .dropdown,
.no-pointerevents .wrapper-dropdown-1 .dropdown {
    display: none;
    opacity: 1; /* If opacity support but no pointer-events support */
    pointer-events: auto; /* If pointer-events support but no pointer-events support */
}
 
.no-opacity       .wrapper-dropdown-1.active .dropdown,
.no-pointerevents .wrapper-dropdown-1.active .dropdown {
    display: block;
}

.needtobelogged {height:150px; text-align:center; padding:15px 5px; 
color:#333;}


/*end dropdown menu profile */

.topMenu ul li a
{

	text-decoration: none;
	color: #333;
	padding: 13px 10px 10px 52px;
	/*background: url(../img/xliff-icon.png) 12px 8px no-repeat;*/
	display: block;
	background-size: 24px; -webkit-transition: all 100ms ease-in;
	-moz-transition: all 100ms ease-in;

    }

    .topMenu ul li 
    {



	    border-bottom:1px solid #ccc;

    }



    .currSegment a {box-shadow: inset 0px 1px #fff, 0px 1px #fff;
	    box-shadow: inset 0px 1px #fff, 0px 1px #fff;
	    -moz-box-shadow: inset 0px 1px #fff, 0px 1px #fff;
	    -webkit-box-shadow: inset 0px 1px #fff, 0px 1px #fff;}

    .topMenu ul li:last-child
    {
	    border-bottom:0;

    }

    .topMenu ul li.current a
    {
	    font-weight: bold;
	    border-left: 3px solid #ffcc00;
    }



    .currSegment a

    {
	    background: #efefef url(../img/sprite.png) 15px -160px no-repeat !important;
	    background-size: 25px!important;  
	    border-top: 1px solid #ccc;
	    box-shadow: inset 0px 1px #fff;
	    -moz-box-shadow: inset 0px 1px #fff;
	    -webkit-box-shadow: inset 0px 1px #fff;

  }








  .topMenu ul li a:hover
  {
	  text-decoration: underline;
}  







.slideMenu
{
	position: fixed;
	right: 0;
	bottom: -273px;
	width: 30px;
	background: #6d6e71;
	border-top: 1px solid #333;
	border-right: 1px solid #333;
	border-left: 1px solid #333;
	z-index: 999999999;
    }
    .slideMenu ul.bar li
    {
	    background: transparent url(../img/nav-icons.png) -10px -10px no-repeat;
    }
    .slideMenu ul.bar li a
    {
	    display: block;
	    width: 30px;
	    height: 30px;
	    text-indent: -9999px;
	    margin-bottom: 5px;
    }
    .slideMenu ul.bar li.disabled a
    {
	    visibility: hidden;
}

#contextMenu
{
	position: absolute;
	display: none;
	background: white;
	z-index: 999;
	border: 1px solid #999;
	width: 200px;
	padding: 3px;
    }
    #contextMenu li
    {
	    text-align: left;
	    padding: 3px;
	    font-size: 80%;
    }
    #contextMenu li:hover
    {
	    background: #eee;
	    cursor: pointer;
}
#contextMenu .shortcut
{
	float: right;
    }


    /*popup*/
    .modal[data-type=view]
    {
	    display: none;
    }

    #popupWrapper, .mgmt-popup-outer
    {
	    display: none;
    }
    .popup-outer, .mgmt-popup-outer
    {
	    background: #000;
	    position: fixed;
	    top: 0;
	    left: 0;
	    width: 100%;
	    height: 100%;
	    z-index: 99999999999999;
	    opacity: 0.6;
    }
	
	.mgmt-popup-outer {
		z-index: 10;
	}

    .popup
    {
	    overflow: hidden;
	    line-height: 30px;
	    border-radius: 7px;
	    color: #000 !important;
	    -webkit-box-shadow: 0 1px 20px #000;
	    box-shadow: 0 1px 20px #000;
	    width: 500px;
	    background: #fff;
	    margin: -200px 0 0 -250px;
	    padding: 0 0px 20px 0px;
	    position: fixed;
	    top: 50%;
	    left: 50%;
	    z-index: 999999999999999999999999999;
    }
    .popup.popup-alert:hover
    {
	    background-color: #fff;
}


.slide-panel {
    height: 100%!important;
    width: 1100px;
    margin: 0 auto;
    overflow-x: hidden;
    overflow-y: auto;
    position: fixed;
    z-index: 10000000000000;
    top: 0;
    right: 0;
    background: #fff;
    box-shadow: -2px 5px 7px #7B7B7B;
}

/*
.editing .popup-tm {
    top:20px;

}
*/
td.addtmxtd {
width: 804px;
}
#activetm td.action .addtmx {
    display: block;
}

.downloading .uploadloader {
	display: block;
	z-index: 10;
}

.downloading .uploadloader {
	right: 126px;
margin-top: -2px;
background-size: 15px;
background-color: #D6D6D6;
}



.uploadloader{background:url(../img/loader.gif) center center no-repeat;display:block;width:20px;height:20px;float:right;margin-top:35px;display:none;position:absolute;right:260px;background-size: 20px 20px;}


td.action {
padding: 10px 5px!important;
}
#inactivetm td.action .addtmx {
    visibility: hidden;
}
#activetm tr:hover td {
background: #f1f8fc;
}
#inactivetm tr:hover td {
background: #f8f8f8;
}
form.add-TM-Form {
    display: inline;
    padding: 0px 0 10px;
}
#uploadCallback {
    display: none;
}

#activetm tr.new .error {
    display: none;
    float: left;
    width: 80%;
    color: #F00;
}

.notify td {
background: #FFFA8B !important;
padding: 5px 25px;
text-align: right;
}

#activetm tr.new .error span {
    display: none;
    width: 100%;
    line-height: 100%;
    float: left;
    margin-bottom: 6px;
}



.popup p
{
	font-size: 18px;
    }
    .popup h1, .slide-panel h1
    {
	    overflow: visible;
	    max-height: inherit;
	    font-size: 24px;
	    background: #4D4D4D url(../img/sprite.png) 10px 10px no-repeat;
	    padding: 10px 10px 7px 58px;
	    border-bottom: 1px solid #000;
	    color: #fff;
	    margin: 0 !important;
	    text-align: left;
    }
    .slide-panel h1 {
    	height: 30px;
    	padding: 10px 23px 7px 58px;
    }
    .popup h2
    {
	    font-weight: normal;
	    font-size: 24px;
	    color: black;
	    display: block;
	    margin: 20px 0 20px 0;
    }

    .popup a.anonymous
    {
	    font-size: 12px;
    }
    .popup a.anonymous:visited,
    .popup a.anonymous:active 
    {
	    color: black;
    }
/* ... */

